2006-08-02  Tom Zanussi  <zanussi@us.ibm.com>

	* stpd.c (main): Use modname rather than driver_pid in
	stpd_filebase.

2006-07-20  Martin Hunt  <hunt@redhat.com>

	* librelay.c (stp_main_loop): If module doesn't start, kill any
	target command.

2006-06-23  Tom Zanussi  <zanussi@us.ibm.com>

	* librelay.c (cleanup_and_exit): Close relay files even	if
	not merging.

2006-06-13  Martin Hunt  <hunt@redhat.com>

	* librelay.c (start_cmd): Rewrite using sigwait() to eliminate
	a race.

2006-05-18  Martin Hunt  <hunt@redhat.com>

	* librelay.c (stp_main_loop): Set output to always be line
	buffered.

2006-04-08  Martin Hunt  <hunt@redhat.com>

	* librelay.c (stp_main_loop): Write with fwrite() instead 
	of fputs() so we can write binary data.

2006-04-05  Martin Hunt  <hunt@redhat.com>
	* librelay.c (merge_output): Remove ANSI codes and write
	warning to stderr.

2006-04-05  Martin Hunt  <hunt@redhat.com>	
	* librelay.c (merge_output): Set the output filename if necessary.
	(merge_output): 

	* stpd.c (main): Don't reset output_filename just because 
	relayfs is possible. Move that code to librelay.c.

2006-04-04  Roland McGrath  <roland@redhat.com>

	* stpd.c (main): Cast f_type when comparing; type differs by machine.

2006-04-04  Tom Zanussi  <zanussi@us.ibm.com>

	* stpd.c (main): Check that /mnt/relay is actually relayfs.

2006-03-15  Tom Zanussi  <zanussi@us.ibm.com>

	* stpd.c (main): Add runtime check for relayfs vs relay-on-proc.

2006-03-06  Martin Hunt  <hunt@redhat.com>

	* librelay.c (start_cmd): Set proper uid/gid before execing
	command.
	(system_cmd): New function.
	(cleanup_and_exit): Wait for any child processes to complete.
	(stp_main_loop): Recognize STP_SYSTEM message.

	* stpd.c (main): Add support for "-u username".

2006-02-25  Martin Hunt  <hunt@redhat.com>

	* librelay.c (init_stp): Better error handling and cleanup.

2006-02-23  Frank Ch. Eigler  <fche@elastic.org>

	PR 1304
	* stpd.c (mdooptions): New array.